--- a/src/sim/SConscript
+++ b/src/sim/SConscript
@@ -78,6 +78,7 @@ Source('clocked_object.cc')
 Source('mathexpr.cc')
 
 GTest('byteswap.test', 'byteswap.test.cc', '../base/types.cc')
+GTest('guest_abi.test', 'guest_abi.test.cc')
 
 if env['TARGET_ISA'] != 'null':
     SimObject('InstTracer.py')
