system-arm: Rename ARM bootloader source
The AArch32 assembly source has been renamed from simple.S to boot.S,
and the Makefile has been renamed to makefile (lowercase) to match
the AArch64 convention

Change-Id: Ia4581fe0223c156460edcc558622b5d7962258dc
Signed-off-by: Giacomo Travaglini <giacomo.travaglini@arm.com>
Reviewed-by: Adrian Herrera <adrian.herrera@arm.com>
Reviewed-on: https://gem5-review.googlesource.com/c/public/gem5/+/23949
Reviewed-by: Nikos Nikoleris <nikos.nikoleris@arm.com>
Tested-by: kokoro <noreply+kokoro@google.com>

--- a/system/arm/bootloader/arm/makefile
+++ b/system/arm/bootloader/arm/makefile
@@ -48,7 +48,7 @@ LD=$(CROSS_COMPILE)ld
 
 all: boot.arm boot_emm.arm
 
-boot.o: simple.S
+boot.o: boot.S
 	$(CC) -mfloat-abi=softfp -march=armv7-a -fno-builtin -nostdinc -o $@ -c $<
 
 boot.arm: boot.o
@@ -57,7 +57,7 @@ boot_emm.arm: boot.o
 	$(LD) -o $@ -N -Ttext 0x00000010 $< -non_shared -static
 
 
-clean:	
+clean:
 	$(RM) -f *.o boot.arm boot_emm.arm
 
 .PHONY: all clean
