tests,base: Added GTest for base/socket.cc
It should be noted that some features of this class have not been fully
tested due to interaction with system-calls.

Change-Id: I8315188327e022ac4c98aa9ce4bd38243266ab17
Reviewed-on: https://gem5-review.googlesource.com/c/public/gem5/+/23984
Reviewed-by: Daniel Carvalho <odanrc@yahoo.com.br>
Maintainer: Jason Lowe-Power <jason@lowepower.com>
Tested-by: kokoro <noreply+kokoro@google.com>

--- a/src/base/SConscript
+++ b/src/base/SConscript
@@ -70,6 +70,7 @@ Source('random.cc')
 if env['TARGET_ISA'] != 'null':
     Source('remote_gdb.cc')
 Source('socket.cc')
+GTest('socket.test', 'socket.test.cc', 'socket.cc')
 Source('statistics.cc')
 Source('str.cc')
 GTest('str.test', 'str.test.cc', 'str.cc')
